[package]
name    = "project-ctl"
version = "0.1.0"
authors = ["Anton Dutov <anton.dutov@gmail.com>"]
edition = "2018"

[dependencies]
dirs         = "1"
nix          = "0.12"
failure      = "0.1"
walkdir      = "2"
termcolor    = "1"
clap         = "2"
serde        = { version = "1", features = ["derive"] }
serde_yaml   = "0.7"
