[package]
name    = "project-ctl"
version = "0.1.0"
authors = ["Anton Dutov <anton.dutov@gmail.com>"]
edition = "2018"

[dependencies]
dirs         = "3"
nix          = "0.20"
anyhow       = "1"
walkdir      = "2"
termcolor    = "1"
clap         = "3.0.0-beta.1"
serde        = { version = "1", features = ["derive"] }
serde_yaml   = "0.8"
