[package]
name = "prctl"
version = "0.1.0"
authors = ["Anton Dutov <anton.dutov@gmail.com>"]
edition = "2024"

[profile.release]
lto = true
strip = true
debug = false
rpath = false
opt-level = 2
incremental = false
codegen-units = 1
debug-assertions = false

[dependencies]
dirs = "6"
nix = { version = "0.30", features = ["fs"] }
anyhow = "1"
walkdir = "2"
owo-colors = "4"
comfy-table = "7"
rayon = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.9"
